--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -307,48 +307,6 @@
          </option>
       <option
             applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
-            commandGenerator="org.eclipse.cdt.cross.arc.gnu.ARCManagedCommandLineGenerator"
-            id="org.eclipse.cdt.cross.arc.gnu.base.option.target.fpi"
-            name="FPX"
-            valueType="enumerated">
-         <enumeratedOptionValue
-               id="org.eclipse.cdt.cross.arc.gnu.base.option.fpi.none"
-               isDefault="true"
-               name="None">
-         </enumeratedOptionValue>
-         <enumeratedOptionValue
-               command="-mspfp"
-               id="org.eclipse.cdt.cross.arc.gnu.base.option.fpi.spfp"
-               name="Single Precision FPX (-mspfp)">
-         </enumeratedOptionValue>
-         <enumeratedOptionValue
-               command="-mspfp-fast"
-               id="org.eclipse.cdt.cross.arc.gnu.base.option.fpi.spfp_fast"
-               name="Single Precision FPX, fast (-mspfp-fast)">
-         </enumeratedOptionValue>
-         <enumeratedOptionValue
-               command="-mspfp-compact"
-               id="org.eclipse.cdt.cross.arc.gnu.base.option.fpi.spfp_compact"
-               name="Single Precision FPX, compact (-mspfp-compact)">
-         </enumeratedOptionValue>
-         <enumeratedOptionValue
-               command="-mdpfp"
-               id="org.eclipse.cdt.cross.arc.gnu.base.option.fpi.dpfp"
-               name="Double Precision FPX (-mdpfp)">
-         </enumeratedOptionValue>
-         <enumeratedOptionValue
-               command="-mdpfp-fast"
-               id="org.eclipse.cdt.cross.arc.gnu.base.option.fpi.dpfp_fast"
-               name="Double Precision FPX, fast (-mdpfp-fast)">
-         </enumeratedOptionValue>
-         <enumeratedOptionValue
-               command="-mdpfp-compact"
-               id="org.eclipse.cdt.cross.arc.gnu.base.option.fpi.dpfp_compact"
-               name="Double Precision FPX, compact (-mdpfp-compact)">
-         </enumeratedOptionValue>
-      </option>
-      <option
-            applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
             command="-mmul32x16"
             id="org.eclipse.cdt.cross.arc.gnu.base.option.target.mul3216"
             name="DSP 32x16 MPY (-mmul32x16)"
@@ -2200,6 +2158,60 @@
          </option>
          <option
                category="com.synopsys.arc.gnu.elf.toolchain.base.target"
+               id="com.synopsys.arc.gnu.elf.toolchain.base.target.fpx"
+               name="%option.fpu"
+               valueType="enumerated">
+            <enumeratedOptionValue
+                  id="com.synopsys.arc.gnu.elf.toolchain.base.target.fpx.none"
+                  isDefault="true"
+                  name="None">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mspfp"
+                  id="com.synopsys.arc.gnu.elf.toolchain.base.target.fpx.spfp"
+                  name="Single Precision FPX (-mspfp)">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mspfp-fast"
+                  id="com.synopsys.arc.gnu.elf.toolchain.base.target.fpx.spfp_fast"
+                  name="Single Precision FPX, fast (-mspfp-fast)">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mspfp-compact"
+                  id="com.synopsys.arc.gnu.elf.toolchain.base.target.fpx.spfp_compact"
+                  name="Single Precision FPX, compact (-mspfp-compact)">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mdpfp"
+                  id="com.synopsys.arc.gnu.elf.toolchain.base.target.fpx.dpfp"
+                  name="Double Precision FPX (-mdpfp)">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mdpfp-fast"
+                  id="com.synopsys.arc.gnu.elf.toolchain.base.target.fpx.dpfp_fast"
+                  name="Double Precision FPX, fast (-mdpfp-fast)">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mdpfp-compact"
+                  id="com.synopsys.arc.gnu.elf.toolchain.base.target.fpx.dpfp_compact"
+                  name="Double Precision FPX, compact (-mdpfp-compact)">
+            </enumeratedOptionValue>
+            <enablement
+                  type="UI_VISIBILITY">
+               <or>
+                  <checkBuildProperty
+                        property="com.synopsys.arc.gnu.elf.properties.cpu"
+                        value="com.synopsys.arc.gnu.elf.properties.cpu.arc700">
+                  </checkBuildProperty>
+                  <checkBuildProperty
+                        property="com.synopsys.arc.gnu.elf.properties.cpu"
+                        value="com.synopsys.arc.gnu.elf.properties.cpu.arc600">
+                  </checkBuildProperty>
+               </or>
+            </enablement>
+         </option>
+         <option
+               category="com.synopsys.arc.gnu.elf.toolchain.base.target"
                command="-mdiv-rem"
                id="com.synopsys.arc.gnu.elf.toolchain.base.target.divrem"
                name="%option.divrem"
@@ -3709,30 +3721,6 @@
          <option
                applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
                category="com.synopsys.arc.gnu.elf.toolchain.base.target"
-               commandGenerator="org.eclipse.cdt.cross.arc.gnu.ARCManagedCommandLineGenerator"
-               id="org.eclipse.cdt.cross.arc.gnu.700.linux.option.target.fpi"
-               isAbstract="false"
-               name="FPX"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.fpi">
-            <enumeratedOptionValue
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.fpi.none"
-                  isDefault="true"
-                  name="None">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-mspfp"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.fpi.spfp"
-                  name="Single Precision FPX (-mspfp)">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-mdpfp"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.fpi.dpfp"
-                  name="Double Precision FPX (-mdpfp)">
-            </enumeratedOptionValue>
-         </option>
-         <option
-               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
-               category="com.synopsys.arc.gnu.elf.toolchain.base.target"
                id="org.eclipse.cdt.cross.arc.gnu.700.linux.option.target.mpy"
                name="MPY instructions (-mmpy)"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mpy"
@@ -3900,30 +3888,6 @@
                id="org.eclipse.cdt.cross.arc.gnu.700.eb.linux.option.addtools.printsize"
                name="Print Size"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.addtools.printsize">
-         </option>
-         <option
-               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
-               category="com.synopsys.arc.gnu.elf.toolchain.base.target"
-               commandGenerator="org.eclipse.cdt.cross.arc.gnu.ARCManagedCommandLineGenerator"
-               id="org.eclipse.cdt.cross.arc.gnu.700.eb.linux.option.target.fpi"
-               isAbstract="false"
-               name="FPX"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.fpi">
-            <enumeratedOptionValue
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.fpi.none"
-                  isDefault="true"
-                  name="None">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-mspfp"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.fpi.spfp"
-                  name="Single Precision FPX (-mspfp)">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-mdpfp"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.fpi.dpfp"
-                  name="Double Precision FPX (-mdpfp)">
-            </enumeratedOptionValue>
          </option>
 
          <option
@@ -4103,30 +4067,6 @@
                name="Print Size"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.addtools.printsize">
          </option>
-                  <option
-               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
-               category="com.synopsys.arc.gnu.elf.toolchain.base.target"
-               commandGenerator="org.eclipse.cdt.cross.arc.gnu.ARCManagedCommandLineGenerator"
-               id="org.eclipse.cdt.cross.arc.gnu.600.linux.option.target.fpi"
-               isAbstract="false"
-               name="FPX"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.fpi">
-            <enumeratedOptionValue
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.fpi.none"
-                  isDefault="true"
-                  name="None">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-mspfp"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.fpi.spfp"
-                  name="Single Precision FPX (-mspfp)">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-mdpfp"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.fpi.dpfp"
-                  name="Double Precision FPX (-mdpfp)">
-            </enumeratedOptionValue>
-         </option>
          <option
                applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
                category="com.synopsys.arc.gnu.elf.toolchain.base.target"
@@ -4298,30 +4238,6 @@
                id="org.eclipse.cdt.cross.arc.gnu.600.eb.linux.option.addtools.printsize"
                name="Print Size"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.addtools.printsize">
-         </option>
-         <option
-               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
-               category="com.synopsys.arc.gnu.elf.toolchain.base.target"
-               commandGenerator="org.eclipse.cdt.cross.arc.gnu.ARCManagedCommandLineGenerator"
-               id="org.eclipse.cdt.cross.arc.gnu.600.eb.linux.option.target.fpi"
-               isAbstract="false"
-               name="FPX"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.fpi">
-            <enumeratedOptionValue
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.fpi.none"
-                  isDefault="true"
-                  name="None">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-mspfp"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.fpi.spfp"
-                  name="Single Precision FPX (-mspfp)">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-mdpfp"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.fpi.dpfp"
-                  name="Double Precision FPX (-mdpfp)">
-            </enumeratedOptionValue>
          </option>
         
          <option
