--- a/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
@@ -3,6 +3,7 @@ release = Release
 
 option.target = Target Processor
 option.fpu = FPU
+option.mpy = Multiply instructions
 option.divrem = Integer divide instructions (-mdiv-rem)
 option.code_density = Code density (-mcode-density)
 option.barrel_shifter = Barrel shifter (-mbarrel-shifter)
