--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -2212,6 +2212,147 @@
          </option>
          <option
                category="com.synopsys.arc.gnu.elf.toolchain.base.target"
+               id="com.synopsys.arc.gnu.elf.toolchain.base.target.mpyem"
+               name="%option.mpy"
+               valueType="enumerated">
+            <enumeratedOptionValue
+                  id="com.synopsys.arc.gnu.elf.toolchain.base.target.mpyem.none"
+                  isDefault="true"
+                  name="none">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mmpy-option=w"
+                  id="com.synopsys.arc.gnu.elf.toolchain.base.target.mpyem.w"
+                  name="w">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mmpy-option=wlh1"
+                  id="com.synopsys.arc.gnu.elf.toolchain.base.target.mpyem.wlh1"
+                  isDefault="false"
+                  name="wlh1">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mmpy-option=wlh2"
+                  id="com.synopsys.arc.gnu.elf.toolchain.base.target.mpyem.wlh2"
+                  name="wlh2">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mmpy-option=wlh3"
+                  id="com.synopsys.arc.gnu.elf.toolchain.base.target.mpyem.wlh3"
+                  name="wlh3">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mmpy-option=wlh4"
+                  id="com.synopsys.arc.gnu.elf.toolchain.base.target.mpyem.wlh4"
+                  name="wlh4">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mmpy-option=wlh5"
+                  id="com.synopsys.arc.gnu.elf.toolchain.base.target.mpyem.wlh5"
+                  name="wlh5">
+            </enumeratedOptionValue>
+            <enablement
+                  type="UI_VISIBILITY">
+               <checkBuildProperty
+                     property="com.synopsys.arc.gnu.elf.properties.cpu"
+                     value="com.synopsys.arc.gnu.elf.properties.cpu.em">
+               </checkBuildProperty>
+            </enablement>
+            <enablement
+                  type="UI_ENABLEMENT">
+               <not>
+                  <or>
+                     <checkOption
+                           optionId="org.eclipse.cdt.cross.arc.gnu.base.option.target.tcf"
+                           value="true">
+                     </checkOption>
+                     <checkOption
+                           optionId="com.synopsys.arc.gnu.elf.toolchain.base.target.cpu"
+                           value="org.eclipse.cdt.cross.arc.gnu.base.option.mcpu.arcem">
+                     </checkOption>
+                     <checkOption
+                           optionId="com.synopsys.arc.gnu.elf.toolchain.base.target.cpu"
+                           value="org.eclipse.cdt.cross.arc.gnu.base.option.mcpu.em4_dmips">
+                     </checkOption>
+                     <checkOption
+                           optionId="com.synopsys.arc.gnu.elf.toolchain.base.target.cpu"
+                           value="org.eclipse.cdt.cross.arc.gnu.base.option.mcpu.em4_fpus">
+                     </checkOption>
+                     <checkOption
+                           optionId="com.synopsys.arc.gnu.elf.toolchain.base.target.cpu"
+                           value="org.eclipse.cdt.cross.arc.gnu.base.option.mcpu.em4_fpuda">
+                     </checkOption>
+                  </or>
+               </not>
+            </enablement>
+         </option>
+         <option
+               category="com.synopsys.arc.gnu.elf.toolchain.base.target"
+               id="com.synopsys.arc.gnu.elf.toolchain.base.target.mpyhs"
+               name="%option.mpy"
+               valueType="enumerated">
+            <enumeratedOptionValue
+                  id="com.synopsys.arc.gnu.elf.toolchain.base.target.mpyhs.none"
+                  isDefault="true"
+                  name="none">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mmpy-option=mpy"
+                  id="com.synopsys.arc.gnu.elf.toolchain.base.target.mpyhs.mpy"
+                  name="mpy">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mmpy-option=plus_dmpy"
+                  id="com.synopsys.arc.gnu.elf.toolchain.base.target.mpyhs.plus_dmpy"
+                  name="plus_dmpy">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mmpy-option=plus_macd"
+                  id="com.synopsys.arc.gnu.elf.toolchain.base.target.mpyhs.plus_macd"
+                  name="plus_macd">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mmpy-option=plus_qmacw"
+                  id="com.synopsys.arc.gnu.elf.toolchain.base.target.mpyhs.plus_qmacw"
+                  name="plus_qmacw">
+            </enumeratedOptionValue>
+            <enablement
+                  type="UI_VISIBILITY">
+               <checkBuildProperty
+                     property="com.synopsys.arc.gnu.elf.properties.cpu"
+                     value="com.synopsys.arc.gnu.elf.properties.cpu.hs">
+               </checkBuildProperty>
+            </enablement>
+            <enablement
+                  type="UI_ENABLEMENT">
+               <not>
+                  <or>
+                     <checkOption
+                           optionId="org.eclipse.cdt.cross.arc.gnu.base.option.target.tcf"
+                           value="true">
+                     </checkOption>
+                     <checkOption
+                           optionId="com.synopsys.arc.gnu.elf.toolchain.base.target.cpu"
+                           value="org.eclipse.cdt.cross.arc.gnu.base.option.mcpu.hs34">
+                     </checkOption>
+                     <checkOption
+                           optionId="com.synopsys.arc.gnu.elf.toolchain.base.target.cpu"
+                           value="org.eclipse.cdt.cross.arc.gnu.base.option.mcpu.archs">
+                     </checkOption>
+                     <checkOption
+                           optionId="com.synopsys.arc.gnu.elf.toolchain.base.target.cpu"
+                           value="org.eclipse.cdt.cross.arc.gnu.base.option.mcpu.hs38">
+                     </checkOption>
+                     <checkOption
+                           optionId="com.synopsys.arc.gnu.elf.toolchain.base.target.cpu"
+                           value="org.eclipse.cdt.cross.arc.gnu.base.option.mcpu.hs38_linux">
+                     </checkOption>
+                  </or>
+               </not>
+            </enablement>
+         </option>
+         <option
+               category="com.synopsys.arc.gnu.elf.toolchain.base.target"
                command="-mdiv-rem"
                id="com.synopsys.arc.gnu.elf.toolchain.base.target.divrem"
                name="%option.divrem"
@@ -2730,51 +2871,6 @@
                   name="ARC EM (-mcpu=em4_fpuda)">
             </enumeratedOptionValue>
          </option>
-         <option
-               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
-               category="com.synopsys.arc.gnu.elf.toolchain.base.target"
-               commandGenerator="org.eclipse.cdt.cross.arc.gnu.ARCManagedCommandLineGenerator"
-               id="org.eclipse.cdt.cross.arc.gnu.linux.option.target.mpyem"
-               name="Multiply instructions (ARC EM)"
-               valueType="enumerated">
-            <enumeratedOptionValue
-                  command="-mmpy-option=none"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpyem.none"
-                  isDefault="true"
-                  name="none">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-mmpy-option=w"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpyem.w"
-                  name="w">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-mmpy-option=wlh1"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpyem.wlh1"
-                  isDefault="false"
-                  name="wlh1">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-mmpy-option=wlh2"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpyem.wlh2"
-                  name="wlh2">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-mmpy-option=wlh3"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpyem.wlh3"
-                  name="wlh3">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-mmpy-option=wlh4"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpyem.wlh4"
-                  name="wlh4">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-mmpy-option=wlh5"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpyem.wlh5"
-                  name="wlh5">
-            </enumeratedOptionValue>
-         </option>
         
          <optionCategory
                id="org.eclipse.cdt.cross.arc.gnu.em.linux.category.debugging"
@@ -2971,12 +3067,6 @@
                category="com.synopsys.arc.gnu.elf.toolchain.base.target"
                id="org.eclipse.cdt.cross.arc.gnu.em.eb.linux.option.target.processor"
                superClass="org.eclipse.cdt.cross.arc.gnu.linux.option.target.processor">
-         </option>
-         <option
-               category="com.synopsys.arc.gnu.elf.toolchain.base.target"
-               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.option.target.mpyem"
-               name="Multiply instructions (ARC EM)"
-               superClass="org.eclipse.cdt.cross.arc.gnu.linux.option.target.mpyem">
          </option>
          <optionCategory
                id="org.eclipse.cdt.cross.arc.gnu.em.eb.linux.category.debugging"
@@ -3224,40 +3314,6 @@
                   name="ARC HS (-mcpu=hs38_linux)">
             </enumeratedOptionValue>
          </option>
-         <option
-               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
-               category="com.synopsys.arc.gnu.elf.toolchain.base.target"
-               commandGenerator="org.eclipse.cdt.cross.arc.gnu.ARCManagedCommandLineGenerator"
-               id="org.eclipse.cdt.cross.arc.gnu.linux.option.target.mpyhs"
-               name="Multiply instructions (ARC HS)"
-               valueType="enumerated">
-            <enumeratedOptionValue
-                  command="-mmpy-option=none"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpy.none"
-                  isDefault="true"
-                  name="none">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-mmpy-option=mpy"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpy.mpy"
-                  name="mpy">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-mmpy-option=plus_dmpy"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpy.plus_dmpy"
-                  name="plus_dmpy">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-mmpy-option=plus_macd"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpy.plus_macd"
-                  name="plus_macd">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-mmpy-option=plus_qmacw"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpy.plus_qmacw"
-                  name="plus_qmacw">
-            </enumeratedOptionValue>
-         </option>
          <optionCategory
                id="org.eclipse.cdt.cross.arc.gnu.hs.linux.category.debugging"
                name="Debugging">
@@ -3455,12 +3511,6 @@
                category="com.synopsys.arc.gnu.elf.toolchain.base.target"
                id="org.eclipse.cdt.cross.arc.gnu.hs.eb.linux.option.target.processor"
                superClass="org.eclipse.cdt.cross.arc.gnu.hs.linux.option.target.processor">
-         </option>
-         <option
-               category="com.synopsys.arc.gnu.elf.toolchain.base.target"
-               id="org.eclipse.cdt.cross.arc.gnu.hs.eb.linux.option.target.mpyhs"
-               name="Multiply instructions (ARC HS)"
-               superClass="org.eclipse.cdt.cross.arc.gnu.linux.option.target.mpyhs">
          </option>
          <optionCategory
                id="org.eclipse.cdt.cross.arc.gnu.hs.eb.linux.category.debugging"
