elf: Refactor TCF options

--- a/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
@@ -2,6 +2,10 @@ debug = Debug
 release = Release
 
 option.target = Target Processor
+option.use_tcf = Use TCF
+option.tcf_path = TCF Path
+option.tcf_map = Use memory map from TCF
+option.tcf_cinclude = Include C defines from TCF
 option.fpu = FPU
 option.mpy = Multiply instructions
 option.divrem = Integer divide instructions (-mdiv-rem)
