--- a/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
@@ -6,6 +6,7 @@ option.use_tcf = Use TCF
 option.tcf_path = TCF Path
 option.tcf_map = Use memory map from TCF
 option.tcf_cinclude = Include C defines from TCF
+option.cpu = Processor (-mcpu)
 option.fpu = FPU
 option.mpy = Multiply instructions
 option.divrem = Integer divide instructions (-mdiv-rem)
